--- a/app/views/partials/nav.ejs
+++ b/app/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="/"><strong>Home</strong></a></li>
+        <li><a href="/contact"><strong>Contact</strong></a></li>
     </ul>
 </nav>
